--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(ackermann2actuator)
 
+set(CMAKE_CXX_STANDARD 14)
+
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
 
@@ -9,8 +11,18 @@ project(ackermann2actuator)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  roscpp
   sensor_msgs
   std_msgs
+)
+
+set(SOURCE_FILES
+        include/ExperimentRunner.h
+        include/Measurement.h
+        include/TurningRadiusExperiment.h
+        include/VelocityExperiment.h
+        src/TuringRadiusExperiment.cpp
+        src/VelocityExperiment.cpp
 )
 
 ## System dependencies are found with CMake's conventions
@@ -133,17 +145,20 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/ackermann2actuator_node.cpp)
+add_executable(measure_turning_radius_node ${SOURCE_FILES} src/MeasureTurningRadiusNode.cpp)
+add_executable(measure_velocity_node ${SOURCE_FILES} src/MeasureVelocityNode.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(measure_turning_radius_node PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(measure_velocity_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(measure_turning_radius_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(measure_velocity_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
