--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,13 +155,12 @@ add_executable(measure_velocity_node ${SOURCE_FILES} src/MeasureVelocityNode.cpp
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-set_target_properties(measure_turning_radius_node PROPERTIES OUTPUT_NAME node PREFIX "")
-set_target_properties(measure_velocity_node PROPERTIES OUTPUT_NAME node PREFIX "")
+# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-add_dependencies(measure_turning_radius_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(measure_velocity_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(measure_turning_radius_node ${measure_turning_radius_node_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(measure_velocity_node ${measure_velocity_node_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(measure_turning_radius_node ${catkin_LIBRARIES})
