--- a/config/ackermann2actuator.yaml
+++ b/config/ackermann2actuator.yaml
@@ -14,3 +14,4 @@ velocity_measuring:
   actuator_values: [-0.3, -0.25, -0.2, -0.15, 0.15, 0.2, 0.25, 0.3]
 
   measuring_distance: 2.0
+  acceleration_distance: 1.0
