--- a/config/filter_chain.yaml
+++ b/config/filter_chain.yaml
@@ -16,6 +16,11 @@ turning_radius_measuring:
 
 velocity_measuring:
   scan_filter_chain:
+    - name: window_filter
+      type: laser_filters/LaserScanAngularBoundsFilter
+      params:
+        lower_angle: -0.785 # -pi / 4
+        upper_angle: 0.785 # pi / 4
     - type: laser_filters/LaserArrayFilter
       name: laser_median_filter
       params:
