--- a/config/filter_chain.yaml
+++ b/config/filter_chain.yaml
@@ -17,13 +17,13 @@ velocity_measuring_filter_chain:
   - name: window_filter
     type: laser_filters/LaserScanAngularBoundsFilter
     params:
-      lower_angle: -0.785 # -pi / 4
-      upper_angle: 0.785 # pi / 4
-  - name: array_filter
-    type: laser_filters/LaserArrayFilter
-    params:
-      range_filter_chain:
-        - name: range_median_filter
-          type: filters/MultiChannelMedianFilterFloat
-          params:
-            number_of_observations: 5
+      lower_angle: -0.174 # -10°
+      upper_angle: 0.174 # 10°
+#  - name: array_filter
+#    type: laser_filters/LaserArrayFilter
+#    params:
+#      range_filter_chain:
+#        - name: range_median_filter
+#          type: filters/MultiChannelMedianFilterFloat
+#          params:
+#            number_of_observations: 5
