--- a/config/ackermann2actuator.yaml
+++ b/config/ackermann2actuator.yaml
@@ -6,15 +6,22 @@ turning_radius_measuring:
 
   motor_during_turn: 0.15
 
-  scan_window: 30
-  range_change_threshold: 0.3
-
   filter_chain:
+    - name: rotation_filter
+      type: laser_filters/LaserScanRotationFilter
+      params:
+        index: 360
+    - name: window_filter
+      type: laser_filters/LaserScanAngularBoundsFilter
+      params:
+        lower_angle: -2.967 # -170° TODO: figure this out!
+        upper_angle: 2.967 # 170° TODO: figure this out!
     - name: min_range_window_filter
-      type: a2a/MinRangeWindowFilter
+      type: laser_filters/LaserScanMinRangeWindowFilter
       params:
         - window_angle: 1.57
-        - max_change_in_range: 0.3
+        - change_in_range_threshold: 0.3
+        - replacement_value: .inf
 
 velocity_measuring:
 
@@ -24,11 +31,15 @@ velocity_measuring:
   acceleration_distance: 1.0
 
   filter_chain:
+    - name: rotation_filter
+      type: laser_filters/LaserScanRotationFilter
+      params:
+        index: 360
     - name: window_filter
         type: laser_filters/LaserScanAngularBoundsFilter
         params:
-          lower_angle: -0.174 # -10°
-          upper_angle: 0.174 # 10°
+          lower_angle: -0.1745 # -10°
+          upper_angle: 0.1745 # 10°
 #    - name: array_filter
 #        type: laser_filters/LaserArrayFilter
 #        params:
