--- a/package.xml
+++ b/package.xml
@@ -64,7 +64,6 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <filters plugin="${prefix}/laser_filters_plugins.xml"/>
   </export>
 </package>
