--- a/config/ackermann2actuator.yaml
+++ b/config/ackermann2actuator.yaml
@@ -19,9 +19,9 @@ turning_radius_measuring:
     - name: min_range_window_filter
       type: laser_filters/LaserScanMinRangeWindowFilter
       params:
-        - window_angle: 1.57
-        - change_in_range_threshold: 0.3
-        - replacement_value: .inf
+        window_angle: 1.57
+        change_in_range_threshold: 0.3
+        replacement_value: .inf
 
 velocity_measuring:
 
