--- a/test/MinRangeWindowFilterTest.yaml
+++ b/test/MinRangeWindowFilterTest.yaml
@@ -2,7 +2,7 @@ filter_chain:
   - name: min_range_window_filter
     type: laser_filters/LaserScanMinRangeWindowFilter
     params:
-      window_angle: 1.57
+      window_size: 3
       change_in_range_threshold: 1.0
       range_replacement_value: .inf
       intensity_replacement_value: .inf
